--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,13 @@
     </form>
 
     <span class="loader visually-hidden"></span>
-   <ul class="gallery"></ul>
+    <ul class="gallery"></ul>
+
+
+    <button class="load-more visually-hidden">Load more</button>
+
+    <span class="loader visually-hidden"></span>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
